error.txt
    Checking r2d2-cortex v8.2.0 (/mnt/d/XXXX/R2D2/r2d2-cortex)
error[E0407]: method `interact` is not a member of trait `CognitiveAgent`
  --> r2d2-cortex/src/models/bitnet_agent.rs:72:5
   |
72 |     #[instrument(skip(self, prompt))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a member of trait `CognitiveAgent`
   |
   = note: this error originates in the attribute macro `instrument` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0046]: not all trait items implemented, missing: `generate_thought`
  --> r2d2-cortex/src/models/bitnet_agent.rs:37:1
   |
37 | impl CognitiveAgent for BitNetAgent {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `generate_thought` in implementation
   |
  ::: r2d2-cortex/src/agent.rs:40:5
   |
40 |     async fn generate_thought(&mut self, prompt: &str) -> Result<String, AgentError>;
   |     --------------------------------------------------------------------------------- `generate_thought` from trait

Some errors have detailed explanations: E0046, E0407.
For more information about an error, try `rustc --explain E0046`.
error: could not compile `r2d2-cortex` (lib) due to 2 previous errors
